mouse hover added

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@ body{
     overflow-x: hidden;
 }
 .gen { 
+    cursor: pointer;
     font: normal 10px sans-serif;
     fill: #FFF;
 }
@@ -24,6 +25,7 @@ body{
     fill: transparent;
 }
 .movName{
+    cursor: pointer;
     font: normal 6.5px sans-serif;
     fill: #FFF;
 }
