--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,8 @@
 @import '_variables';
 
 #outSVG{
+    max-width:1000px;
+    width: 100%;
     margin-top: 50px;
     margin-left: 50%;
     @include transform(
