Text Put around Circle

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,8 +4,8 @@
 
 @import '_variables';
 
-#outSVG{
-    max-width:1000px;
+#circularInfographic, #linerInfographic{
+    max-width:800px;
     width: 100%;
     margin-top: 50px;
     margin-left: 50%;
