Genres Text added in list

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,10 @@ body{
     font: normal 6.5px sans-serif;
     fill: #FFF;
 }
+.genName{
+    font: normal 8px sans-serif;
+    fill: #FFF;
+}
 [data-hover-movie],[data-hover-genre]{
     cursor: pointer;
 }
