--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,11 +11,19 @@ body{
 #infoGraphics{
     position: relative;
     max-width:1000px;
+    width: 100%;
     margin-left: 50%;
     padding-top: 30px;
     @include transform(
         translateX(-50%)
     );
+    h2{
+        text-align: center;
+        font-size: 35px;
+        color: white;
+        border-bottom: 1px solid #FFF;
+        padding: 25px;
+    }
     #circularInfographic, #linerInfographic{
         width: 100%;
         margin-top: 50px;
