--- a/scss/main.scss
+++ b/scss/main.scss
@@ -92,7 +92,7 @@ body{
         }
     }
 }
-#movieInfo{
+#movieInfo,#genInfo{
     position: fixed;
     top: 0;
     left: 0;
@@ -107,13 +107,39 @@ body{
     img{
         height: 150px;
     }
-    #info{
+    ul{
+        margin-top: 10px;
+        margin-left: 15px;
+        li{
+            font-size: 12px;
+            margin-top: 5px;
+        }
+        strong{
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            border-radius: 20px;
+            font-size: 18px;
+            background-color: #FFF;
+            margin-right: 5px;
+        }
+    }
+    #info,div{
         padding: 1em;
         display: inline;
         color: white;
         h4{
             font-size: 20px;
             padding: .5em 0;
+            strong{
+                display: inline-block;
+                width: 12px;
+                height: 12px;
+                border-radius: 20px;
+                font-size: 18px;
+                background-color: #FFF;
+                margin-right: 5px;
+            }
         }
         span{
             font-size: 18px;
@@ -121,7 +147,7 @@ body{
         }
         p{
             font-size: 12px;
-            padding: .5em 0;
+            padding: .35em 0;
         }
     }
 }
