--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 body{
     background-color: #555;
     overflow-x: hidden;
+    overflow-y: hidden;
     font-family: sans-serif;
 }
 #posterBackground{
@@ -18,8 +19,25 @@ body{
     left: 0;
     opacity: .2;
     filter: blur(10px);
+    pointer-events: none;
+}
+#preLoader{
+    opacity: 1;
+    @include transition(
+        opacity 1s
+    );
+    position: fixed;
+    width: 200px;
+    top: calc(50% - 100px);
+    left: calc(50% - 100px);
 }
 #infoGraphics{
+    opacity: 0;
+    @include transition(
+        opacity 1s
+    );
+    pointer-events: none;
+
     position: relative;
     max-width:1000px;
     width: calc(90% - 30px);
